force-app/main/default/objects/MS_FSM_Asset_Note__c/MS_FSM_Asset_Note__c.object-meta.xml
<CustomObject>
    <description>Running history of any general notes related to the Asset</description>
    <label>Asset Note</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Asset Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>