force-app/main/default/objects/MS_FSM_Asset_Note__c/fields/MS_FSM_Asset__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset__c</fullName>
    <description>Asset related to this note.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Notes</relationshipLabel>
    <relationshipName>Asset_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>