force-app/main/default/objects/MS_FSM_Asset_Note__c/fields/MS_FSM_Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Status__c</fullName>
    <description>Up, down and idle status of the asset</description>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>