force-app/main/default/objects/MS_FSM_Asset_Note__c/fields/MS_FSM_Asset_Update__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Update__c</fullName>
    <description>Work performed plans for the day.</description>
    <label>Asset Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>