force-app/main/default/objects/MS_FSM_Asset_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MS_FSM_Asset__c</columns>
    <columns>MS_FSM_Asset_Status__c</columns>
    <columns>MS_FSM_Asset_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>